# Autopilot-WAM-V

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Vagrantfile
cmake/: banner.txt
cmake/Modules/: Compiler.cmake  FindCGAL.cmake  FindOpenCV.cmake  FindSpinnaker.cmake  FindTorqeedo.cmake  FindqpOASES.cmake  Findswscale.cmake  Findx264.cmake  SharedLibraries.cmake
module/actuator/LightTower/: README.md
module/actuator/Propulsion/: README.md
module/actuator/Rudder/: README.md
module/actuator/Torqeedo/: CMakeLists.txt  README.md
module/actuator/Torquedo/: README.md
module/communication/ErrorForwarder/: README.md
module/communication/GCS/: README.md
module/control/ControlAllocation/: CMakeLists.txt  README.md
module/control/ModelPredictiveController/: CMakeLists.txt  README.md
module/control/PID/: README.md
module/extension/P2P/: README.md
module/extension/SerialP2P/: README.md
module/guidance/PathPlanner/: README.md
module/guidance/PointAndShoot/: README.md
module/guidance/WaypointNav/: README.md
module/navigation/StateEstimator/: README.md
module/sensor/GPS/: README.md
module/sensor/IMU/: README.md
puppet/: README.md
puppet/manifests/: robotx.pp
roles/: datalogging.role  e38_gnc.role  e38_propulsion.role  nuc1.role  nuc1_sensors.role  nuc3.role  nuc4.role  nuc4_sensors.role  remote_control.role  robotx.role  video_capture.role
shared/extension/: Configuration.h  FileWatch.h  P2P.h
shared/utility/: Clock.h
systems/: setup.sh
systems/e38/: setup.sh
systems/nuc2/: setup.sh
tools/: decode.py  install.py
(+178 files in other folders)
